typo in Author Defaults

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -102,7 +102,7 @@ author:
       url: "https://twitter.com/apcovernight"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/apconvernight"
+      url: "https://github.com/APCOvernight"
 
 
 # Site Footer
