--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ title_separator          : "-"
 subtitle                 : "Resources for Integrators"
 name                     : &name "APC Overnight" # &name is a YAML anchor which can be *referenced later
 description              : &description "A set of resources for developers looking to integrate with APC."
-url                      : https://mmistakes.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://apcovernight.github.io/sme-toolkit/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
 repository               : "APCOvernight/sme-toolkit"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
