--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -42,6 +42,10 @@ docs:
     children:
       - title: "About"
         url: /docs/about-ppapi/
+  - title: Easy Integration Options
+    children:
+      -title: "Direct Tracking Links"
+      url: /docs/tracking-direct-link/
  
 
 # sidebar navigation list sample
